<?xml version="1.0"?>
<package>
  <name>observer_inference</name>
  <version>0.0.0</version>
  <description>The observer_inference package</description>

   <maintainer email="andy@todo.todo">andy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  
  </export>
</package>